feat: fix gcp integration and add some utilities
